# llm-ai-engineering

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/llm_engineering/: __init__.py  w1d1_site_summary.py  w1d2_site_summary_ollama.py  w1d2_site_summary_ollama_openai.py  w1d2_site_summary_ollama_package.py  w1d5_site_brochure.py  w1d5_site_brochure_streaming.py
